final commit to lab3 prog